--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ h4 {
 
 img {
   min-height: 100%;
+  min-width: 100%;
   object-fit: cover;
 }
 
@@ -30,6 +31,7 @@ img {
 
 img[class] {
   width: 100%;
+  height: 100%;
   padding: 25px 25px 25px 25px;
   border-radius: 50px;
 }
@@ -78,12 +80,6 @@ div.ant-page-header span {
 .copyright,
 h4 {
   font-size: 10px;
-}
-
-div.footer {
-  padding: 0px 40px 0px 0px;
-  position: fixed;
-  bottom: 5vh;
 }
 
 h1.subcontent-header {
