--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,3 +1,9 @@
+// Override default variables before the import
+$body-bg: #000;
+
+// Import Bootstrap and its default variables
+@import '~bootstrap/scss/bootstrap.scss';
+
 body {
   background-color: black;
   font-family: 'Poppins';
