--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,13 @@ img {
   object-fit: cover;
 }
 
-.image-container {
-  height: 90vh;
-}
-
 img[class] {
   width: 100%;
   height: 100%;
   padding: 25px 25px 25px 25px;
   border-radius: 50px;
+}
+
+.btn {
+  font-size: 10px !important;
 }
