--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-img {
+/* img {
   min-height: 100%;
   min-width: 100%;
   object-fit: cover;
@@ -9,8 +9,37 @@ img[class] {
   height: 100%;
   padding: 25px 25px 25px 25px;
   border-radius: 50px;
+} */
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50px;
 }
 
 .btn {
   font-size: 10px !important;
+}
+
+.timeline {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.main-content {
+  display: flex;
+  height: 100%;
+  align-content: center;
+  align-items: center;
+}
+
+.container {
+  max-height: 90% !important;
+  overflow: hidden !important;
+}
+
+.header {
+  margin-bottom: 20px;
 }
