--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,12 @@ img[class] {
   padding: 25px 25px 25px 25px;
   border-radius: 50px;
 }
+
+.navbar {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  z-index: 10;
+  background-color: white;
+}
