--- a/src/App.css
+++ b/src/App.css
@@ -25,21 +25,22 @@ img[class] {
 
 div.navbar.container-fluid {
   position: fixed;
-  z-index: 11;
+  z-index: 10;
   background-color: black;
 }
 
 div.timeline-buttons.container-fluid {
+  background-color: black;
   display: flex;
   flex-direction: row;
   overflow: auto;
-  z-index: 10;
+  z-index: 100;
   flex-wrap: nowrap;
-  min-height: 10vh;
+  min-height: 80px;
 }
 
 .maincontent {
-  padding-top: 20vh;
+  padding-top: 150px;
   margin-bottom: 10vh;
 }
 
@@ -77,7 +78,7 @@ button.btn:hover {
 .navbar-brand {
   color: #dcb239;
   font-family: 'Bungee Inline';
-  font-size: 3em;
+  font-size: 40px;
 }
 
 .navbar-brand:hover {
