--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,8 @@ button.btn.btn-primary {
   border-color: black !important;
   margin: 0 0.5em 0 0.5em;
   font-size: 1.5em;
+  transition: color 1s;
+  transition: font-size 1s;
 }
 
 .btn:focus,.btn:active,.btn.btn-primary:focus,.btn.btn-primary:active {
